--- a/entrega-main/css/style.css
+++ b/entrega-main/css/style.css
@@ -17,6 +17,20 @@ header {
     padding: 10px;
 }
 
+.banner {
+    width: 100%;
+    height: 15vh;
+    background-image: url('../img/banner.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+a.nav-link {
+    font-weight: 800;
+    font-size: larger;
+}
+
 .navbar1 {
     justify-content: right;
 }
@@ -42,19 +56,15 @@ main {
     width: 100%;
 }
 
-.imagenes {
-    padding: 45px;
-    align-items: center;
-    width: 1000px;
-    /* Ancho de la imagen */
-    height: auto;
-    /* Altura ajustada automáticamente para mantener la proporción */
-}
-
 .imagenes img {
     margin: 10px 0;
     border-radius: 12px;
     box-shadow: 0px 17px 14px -1px rgba(0, 0, 0, 0.75);
+}
+
+.centrador {
+    display: flex;
+    justify-content: center;
 }
 
 .video {
@@ -70,6 +80,15 @@ main {
 
 p {
     padding: 20px;
+}
+
+.lista-detalles {
+    justify-content: center;
+    text-align: center;
+}
+
+section p {
+    font-weight: 800;
 }
 
 .general {
@@ -141,4 +160,8 @@ p {
 .formularito button:hover {
     background-color: rgb(204, 72, 72);
     color: white;
+}
+
+footer {
+    text-align: center;
 }
